# barcodevalidation

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/bga/: decode_barcode.hpp  detect_box.hpp  detect_text.hpp
src/: decode_barcode.cpp  detect_box.cpp  detect_text.cpp  main.cpp
